# platform_game

./: CMakeLists.txt
include/: Animation.h  Collision.h  Duck.h  EnemiesData.h  Enemy.h  Entity.h  EntityManager.h  GameOverState.h  GameState.h  Lives.h  MainCharacter.h  Player.h  ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h  Slime.h  State.h  StateIdentifiers.h  StateStack.h  TileMap.h  TileMapData.h  World.h
src/: Animation.cpp  Collision.cpp  Duck.cpp  EnemiesData.cpp  Enemy.cpp  Entity.cpp  EntityManager.cpp  GameOverState.cpp  GameState.cpp  Lives.cpp  MainCharacter.cpp  Player.cpp  Slime.cpp  State.cpp  StateStack.cpp  TileMap.cpp  TileMapData.cpp  World.cpp  main.cpp
